--- a/circuito.html
+++ b/circuito.html
@@ -48,7 +48,7 @@
         </div>
     </header>
 
-    <main class="bg-green-950 flex items-center justify-around">
+    <main class="bg-blue-950 flex items-center justify-around">
         <img src="src/images/circuito-layout.jpeg" class="object-contain h-screen" alt="Informações sobre o circuito">
     </main>
 
