--- a/regulamento.html
+++ b/regulamento.html
@@ -52,13 +52,13 @@
         </div>
     </header>
 
-    <main class="bg-green-950 flex justify-around">
-        <section class="text-white font-barlow flex flex-col gap-y-4 w-10/12">
-            <h1 class="text-lg font-semibold uppercase text-center py-4">Regulamento Circuito Ibra de Tênis de
+    <main class="bg-blue-950 flex justify-around">
+        <section class="text-white font-barlow flex flex-col gap-y-4 w-10/12 lg:w-7/12">
+            <h1 class="text-2xl uppercase text-center py-4">Regulamento Circuito Ibra de Tênis de
                 Mesa e Ping Pong</h1>
             <article>
-                <h3 class="font-semibold uppercase">Sobre o circuito:</h3>
-                <p class="text-sm text-justify">O Circuito Ibra de Tênis de Mesa & Ping Pong, foi criado com o intuito de massificar
+                <h3 class="uppercase text-xl">Sobre o circuito:</h3>
+                <p class="text-justify">O Circuito Ibra de Tênis de Mesa & Ping Pong, foi criado com o intuito de massificar
                     a modalidade em
                     Pernambuco, sendo realizado através da Academia Ibra de Tênis de Mesa, primeiro clube especializado
                     do
@@ -66,8 +66,8 @@
             </article>
 
             <article>
-                <h3 class="font-semibold uppercase">História:</h3>
-                <p class="text-sm text-justify">O Circuito Ibra de Tênis de Mesa & Ping Pong, já aconteceu em 1999, 2000, 2001 e
+                <h3 class="uppercase text-xl">História:</h3>
+                <p class="text-justify">O Circuito Ibra de Tênis de Mesa & Ping Pong, já aconteceu em 1999, 2000, 2001 e
                     2002, e entra agora
                     para sua 5ª edição. Este evento foi o grande responsável pela popularização do Tênis de Mesa no
                     interior do estado, sendo realizado ao longo das suas edições em várias cidades do interior,
@@ -75,8 +75,8 @@
             </article>
 
             <article>
-                <h3 class="font-semibold uppercase">O circuito:</h3>
-                <p class="text-sm text-justify">O Circuito Ibra foi criado para realizar um alto padrão de um evento de tênis de
+                <h3 class="uppercase text-xl">O circuito:</h3>
+                <p class="text-justify">O Circuito Ibra foi criado para realizar um alto padrão de um evento de tênis de
                     mesa, seguindo como
                     referência, os padrões da CBTM e a ITTF e proporcionar para os praticantes um ambiente propício para
                     competições, proporcionando aos atletas locais, e estaduais, uma opção acessível e estruturalmente
@@ -84,8 +84,8 @@
             </article>
 
             <article>
-                <h3 class="font-semibold uppercase">5ª edição:</h3>
-                <p class="text-sm text-justify">O circuito a partir desta 5ª edição será realizado para mesatenistas federados ou
+                <h3 class="uppercase text-xl">5ª edição:</h3>
+                <p class="text-justify">O circuito a partir desta 5ª edição será realizado para mesatenistas federados ou
                     praticantes do jogo
                     olímpico e para pessoas que praticam como lazer o ping pong, em categorias separadas, com o objetivo
                     de massificar ainda mais adeptos para o tênis de mesa. Esta temporada contará com seis etapas e uma
@@ -93,8 +93,8 @@
             </article>
 
             <article>
-                <h3 class="font-semibold uppercase">Equipamentos e estrutura:</h3>
-                <p class="text-sm text-justify">Todas as etapas da temporada de 2023 serão realizadas na sede da Academia Ibra de
+                <h3 class="uppercase text-xl">Equipamentos e estrutura:</h3>
+                <p class="text-justify">Todas as etapas da temporada de 2023 serão realizadas na sede da Academia Ibra de
                     Tênis de Mesa em
                     Caruaru, podendo ser realizado além da sede, em um ginásio (definido posteriormente e comunicado no
                     site oficial do circuito: www.ibtatt.com/circuito ).
@@ -103,8 +103,8 @@
             </article>
 
             <article>
-                <h3 class="font-semibold uppercase">Estrutura da sede:</h3>
-                <ul class="text-sm list-disc list-inside">
+                <h3 class="uppercase text-xl">Estrutura da sede:</h3>
+                <ul class="list-disc list-inside">
                     <li>Mesas oficiais de tênis de mesa;</li>
                     <li>Tapete olímpico para tênis de mesa (para jogos realizados na sede da Ibra);</li>
                     <li>Placares;</li>
@@ -120,8 +120,8 @@
             </article>
 
             <article>
-                <h3 class="font-semibold uppercase">Formato do circuito:</h3>
-                <ul class="text-sm list-disc list-inside">
+                <h3 class="uppercase text-xl">Formato do circuito:</h3>
+                <ul class="list-disc list-inside">
                     <li>Competições de tênis de mesa (atletas federados ou não, mas já tem aulas ou já competem a menos
                         de 6 meses);</li>
 
@@ -130,11 +130,11 @@
                 </ul>
             </article>
 
-            <h2 class="font-semibold uppercase">Equipamentos autorizados para as competições de cada atleta inscrito:</h2>
+            <h2 class="uppercase">Equipamentos autorizados para as competições de cada atleta inscrito:</h2>
 
             <article>
-                <h3 class="font-semibold uppercase">Mesatenistas inscritos nas categorias de federados:</h3>
-                <ul class="text-sm list-disc list-inside">
+                <h3 class="uppercase text-xl">Mesatenistas inscritos nas categorias de federados:</h3>
+                <ul class="list-disc list-inside">
                     <li>Apenas raquetes autorizadas pela ITTF;</li>
                     <li>Não será autorizado camisas da cor branca ou shorts;</li>
                     <li>Uso de Tênis apropriado para o tênis de mesa.</li>
@@ -142,8 +142,8 @@
             </article>
 
             <article>
-                <h3 class="font-semibold uppercase">Praticantes de ping pong inscritos nas categorias:</h3>
-                <ul class="text-sm list-disc list-inside">
+                <h3 class="uppercase text-xl">Praticantes de ping pong inscritos nas categorias:</h3>
+                <ul class="list-disc list-inside">
                     <li>Raquetes para ping pong sem necessidade de serem autorizadas pela ITTF, com qualquer tipo de
                         superfície, de um lado ou do outro da raquete;</li>
                     <li>Não será autorizado camisas da cor branca ou shorts;</li>
@@ -152,8 +152,8 @@
             </article>
 
             <article>
-                <h3 class="font-semibold uppercase">Calendário para as inscrições:</h3>
-                <ul class="text-sm list-disc list-inside">
+                <h3 class="uppercase text-xl">Calendário para as inscrições:</h3>
+                <ul class="list-disc list-inside">
                     <li>1ª etapa - de 10 a 26 de maio;</li>
                     <li>2ª etapa - de 29 a 17 de junho;</li>
                     <li>3ª etapa - de 26 a 15 de julho;</li>
@@ -164,16 +164,16 @@
             </article>
 
             <article>
-                <h3 class="font-semibold uppercase">Top 16:</h3>
-                <ul class="text-sm list-disc list-inside">
+                <h3 class="uppercase text-xl">Top 16:</h3>
+                <ul class="list-disc list-inside">
                     <li>As inscrições serão automáticas por meio das 16 melhores posições do ranking de cada divisão
                         (tênis de mesa) e categoria (ping pong).</li>
                 </ul>
             </article>
 
             <article>
-                <h3 class="font-semibold uppercase">Obs I:</h3>
-                <ul class="text-sm list-disc list-inside">
+                <h3 class="uppercase text-xl">Obs I:</h3>
+                <ul class="list-disc list-inside">
                     <li>Mínimo de 06 inscrições, sem limite por categoria ou divisão em cada etapa;</li>
                     <li>
                         O W/O será aplicado após 10 minutos do horário marcado dos jogos da primeira fase. Se houver
@@ -183,8 +183,8 @@
             </article>
 
             <article>
-                <h3 class="font-semibold uppercase">Valor das inscrições por modalidade</h3>
-                <ul class="text-sm list-disc list-inside">
+                <h3 class="uppercase text-xl">Valor das inscrições por modalidade</h3>
+                <ul class="list-disc list-inside">
                     <li>Ping pong: R$ 30 ,00 (Cada categoria); </li>
                     <li>Tênis de Mesa: R$ 50,00 (Cada categoria).</li>
                 </ul>
@@ -195,8 +195,8 @@
             </article>
 
             <article>
-                <h3 class="font-semibold uppercase">Obs II:</h3>
-                <ul class="text-sm list-disc list-inside">
+                <h3 class="uppercase text-xl">Obs II:</h3>
+                <ul class="list-disc list-inside">
                     <li>Nas modalidade de tênis de mesa, o atleta poderá se escrever em até duas categorias, na sua
                         divisão e uma acima;</li>
                     <li>Nas modalidade ping pong, o atleta poderá se inscrever na categoria da sua idade e na categoria
@@ -205,8 +205,8 @@
             </article>
 
             <article>
-                <h3 class="font-semibold uppercase">Calendário do circuito</h3>
-                <ul class="text-sm list-disc list-inside">
+                <h3 class="uppercase text-xl">Calendário do circuito</h3>
+                <ul class="list-disc list-inside">
                     <li>02 a 04 de junho de 2023;</li>
                     <li>30 de junho a 02 de julho de 2023;</li>
                     <li>04 a 06 de agosto de 2023;</li>
@@ -219,8 +219,8 @@
             </article>
 
             <article>
-                <h3 class="font-semibold uppercase">Características dos inscritos por etapa:</h3>
-                <ul class="text-sm list-disc list-inside">
+                <h3 class="uppercase text-xl">Características dos inscritos por etapa:</h3>
+                <ul class="list-disc list-inside">
                     <li>
                         Categorias de Tênis de Mesa: Jogadores matriculados em alguma escolinha de tênis de mesa ou
                         que tenham o seu nome vinculado por alguma federação de Tênis de mesa;
@@ -235,8 +235,8 @@
             </article>
 
             <article>
-                <h3 class="font-semibold uppercase">Premiações:</h3>
-                <ul class="text-sm list-disc list-inside">
+                <h3 class="uppercase text-xl">Premiações:</h3>
+                <ul class="list-disc list-inside">
                     <li>1º colocado: Troféu e Medalha (Tênis de Mesa);</li>
                     <li>2º colocado: Medalha de Prata (Tênis de Mesa);</li>
                     <li>3º colocado: Duas Medalhas de Bronze (Tênis de Mesa);</li>
@@ -248,13 +248,13 @@
                     </li>
                 </ul>
 
-                <ul class="text-sm list-disc list-inside">
+                <ul class="list-disc list-inside">
                     <li>1º colocado: Medalha (Ping Pong);</li>
                     <li>2º colocado: Medalha de Prata (Ping Pong);</li>
                     <li>3º colocado: Duas Medalhas de Bronze (Ping Pong).</li>
                 </ul>
 
-                <ul class="text-sm list-disc list-inside">
+                <ul class="list-disc list-inside">
                     <li>
                         Troféu para o clube que mais pontuar em cada etapa seguindo a soma dos resultados dos seus
                         atletas (Tênis de Mesa + Ping Pong);
@@ -265,9 +265,9 @@
             </article>
 
             <article>
-                <h3 class="font-semibold uppercase">Premiação TOP 16:</h3>
+                <h3 class="uppercase text-xl">Premiação TOP 16:</h3>
                 <h4>Os campeões de cada modalidade, em suas referidas categorias receberão:</h4>
-                <ul class="text-sm list-disc list-inside">
+                <ul class="list-disc list-inside">
                     <li>1º lugar - Troféu Hugo Hoyama + Medalha + Premiação em Dinheiro;</li>
                     <li>2º e os dois 3º lugares - Medalhas;</li>
                     <li>Será entregue o troféu eficiência para os três melhores clubes da temporada 2023;</li>
@@ -277,10 +277,10 @@
             </article>
 
             <article>
-                <h3 class="font-semibold uppercase">Divisões que serão disputadas no circuito:</h3>
-                <h4 class="font-semibold">Masculino e Feminino:</h4>
+                <h3 class="uppercase text-xl">Divisões que serão disputadas no circuito:</h3>
+                <h4 class="uppercase">Masculino e Feminino:</h4>
                 <h5>Inscritos ou inscritas nas categorias de Ping Pong:</h5>
-                <ul class="text-sm list-disc list-inside pb-4">
+                <ul class="list-disc list-inside pb-4">
                     <li>6 a 8 anos;</li>
                     <li>9 a 10 anos;</li>
                     <li>11 a 12 anos;</li>
@@ -294,9 +294,9 @@
                     <li>a partir de 70 anos.</li>
                 </ul>
 
-                <h4 class="font-semibold">Masculino e Feminino:</h4>
+                <h4 class="uppercase">Masculino e Feminino:</h4>
                 <h5>Inscritos ou inscritas no tênis de mesa:</h5>
-                <ul class="text-sm list-disc list-inside">
+                <ul class="list-disc list-inside">
                     <li>Divisão A;</li>
                     <li>Divisão B;</li>
                     <li>Divisão C;</li>
