--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,27 +11,34 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
     <title>Ibra Academia</title>
 </head>
 
 <body>
-    <header class="flex items-center justify-between p-2 font-barlow">
-        <img src="src/images/logo.jpeg" class="h-10" alt="Logo da Ibra Academia de Tênis de Mesa">
+    <header class="flex flex-col items-center p font-barlow">
         <nav class="hidden bg-slate-600 h-screen w-screen absolute top-14 right-0 p-4 uppercase animate__animated animate__slideInDown
         lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
-                <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover"><a href="">Início</a></li>
-                <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover"><a href="">Sobre</a></li>
-                <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover"><a href="">Parceiros</a></li>
-                <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover"><a href="circuito.html">O circuito</a></li>
-                <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover"><a href="">Contato</a></li>
+                <li class="header__li--style"><a href="">Início</a></li>
+                <li class="header__li--style"><a href="">Sobre</a></li>
+                <li class="header__li--style"><a href="">Parceiros</a></li>
+                <li class="header__li--style"><a href="circuito.html">O circuito</a></li>
+                <li class="header__li--style"><a href="">Contato</a></li>
             </ul>
         </nav>
-        <a href="#" class="hidden">Circuito Ibra</a>
+
+        <div id="header__logo--container" class="flex items-center justify-center gap-x-4 w-screen bg-slate-700 text-white uppercase">
+            <p>Academia Ibra</p>
+            <img src="src/images/logo.jpeg" class="h-10" alt="Logo da Ibra Academia de Tênis de Mesa">
+            <p>Fábrica de Campeões</p>
+        </div>
 
         <div id="header__container--icons">
             <img src="src/images/bar.png" id="header__icons--menu" class="h-8 lg:hidden" alt="Ícone do menu">
@@ -39,23 +47,28 @@
     </header>
 
     <main>
-        <div id="main__container--images" class="bg-green-950 h-screen flex flex-col items-center justify-center gap-y-4">
+        <div id="main__container--images" style="background-image: url('src/images/2.jpg'); background-size: cover;"
+            class="bg-green-950 h-screen flex flex-col items-center justify-center gap-y-4">
             <h1 class="uppercase text-5xl text-white font-barlow">Circuito Ibra 2023</h1>
+            <!-- <img src="src/images/hoyama.png" class="rounded" alt=""> -->
             <a href="circuito.html" id="main__button" class="main__button--style button__hover">Mais informações</a>
         </div>
 
     </main>
-    
+
     <footer class="footer bg-slate-700 text-white flex flex-col items-center gap-y-2 py-2 font-barlow">
         <h2 class="uppercase">Academia Ibra Tênis de Mesa</h2>
         <div id="footer__container--icons" class="flex gap-x-4">
-            <a href="https://api.whatsapp.com/send?phone=81998320016&text=Como%20podemos%20ajudá-lo?" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://api.whatsapp.com/send?phone=81998320016&text=Como%20podemos%20ajudá-lo?" target="_blank"><i
+                    class="fa-brands fa-whatsapp"></i></a>
             <a href="https://www.instagram.com/ibratdm/"><i class="fa-brands fa-instagram" target="_blank"></i></a>
             <a href="#" target="_blank"><i class="fa-regular fa-envelope"></i></a>
-            <a href="https://goo.gl/maps/LLFepdFvPgzSioes5?coh=178571&entry=tt" target="_blank"><i class="fa-solid fa-location-dot"></i></a>
+            <a href="https://goo.gl/maps/LLFepdFvPgzSioes5?coh=178571&entry=tt" target="_blank"><i
+                    class="fa-solid fa-location-dot"></i></a>
         </div>
     </footer>
 
     <script src="src/js/main.js"></script>
 </body>
+
 </html>
