--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 </head>
 
 <body>
-    <header class="flex flex-col items-center p font-barlow">
+    <header class="flex justify-between p-2 font-barlow">
+        <img src="src/images/logo.jpeg" class="h-10 lg:hidden" alt="Logo da Ibra Academia de Tênis de Mesa">
         <nav class="hidden bg-slate-600 h-screen w-screen absolute top-14 right-0 p-4 uppercase animate__animated animate__slideInDown
         lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
@@ -34,7 +35,8 @@
             </ul>
         </nav>
 
-        <div id="header__logo--container" class="flex items-center justify-center gap-x-4 w-screen bg-slate-700 text-white uppercase">
+        <div id="header__logo--container"
+            class="hidden lg:flex lg:items-center lg:justify-center lg:gap-x-4 lg:w-screen lg:bg-slate-700 lg:text-white lg:uppercase">
             <p>Academia Ibra</p>
             <img src="src/images/logo.jpeg" class="h-10" alt="Logo da Ibra Academia de Tênis de Mesa">
             <p>Fábrica de Campeões</p>
@@ -46,11 +48,10 @@
         </div>
     </header>
 
-    <main>
-        <div id="main__container--images" style="background-image: url('src/images/2.jpg'); background-size: cover;"
-            class="bg-green-950 h-screen flex flex-col items-center justify-center gap-y-4">
+    <main style="background-image: url('src/images/2.jpg'); background-size: cover;">
+        <h1 class="uppercase font-barlow text-2xl text-white">- Bem vindos! -</h1>
+        <div id="main__container--images" class="h-screen flex flex-col items-center justify-center gap-y-4">
             <h1 class="uppercase text-5xl text-white font-barlow">Circuito Ibra 2023</h1>
-            <!-- <img src="src/images/hoyama.png" class="rounded" alt=""> -->
             <a href="circuito.html" id="main__button" class="main__button--style button__hover">Mais informações</a>
         </div>
 
